  new geoms, stats and positions in other packages (#989).

* `facet_grid()` and `facet_wrap()` gain a `switch` argument that
  allows the facet titles to be displayed near the axes. They then act
  as axes subtitles. Can be set to "x", "y" or "both" (the latter only
  for grids) to control which label strips are switched. (@lionel-)

* New `theme_void()`, which is completely empty. Useful for plots with non
  standard coordinates or for producing numerical drawings with R. (@jiho, #976)

* New `geom_curve()` that adds curved lines, similar to `geom_segment()`.
  (@veraanadi, #1088)

* New `validate = FALSE` parameter to `theme()` makes it possible to turn off
  validation, and hence store arbitrary additional data in the themes.
  (@tdhock, #1121)

* Create correct legend for continuous color even if there is only one color
  (@krlmlr, #943)

* Position adjustments no longer warn about potentially varying ranges
  because the problem rarely occurs in practice and there are currently a
  lot of false positives since I don't understand exactly what FP criteria
  I should be testing.

* New dark-backgrounded theme, `theme_dark()`, meant to make colours pop out
  (@jiho, #1018)

* `aes_string()` now only parses character inputs. This problems bugs when
  using it with numbers and non default `OutDec` settings (#1045).

* `cut_number()` gives error message if insufficient data values to
  produce requested bins (#1046).

* `facet_wrap()` and `facet_grid()` now allow you to use non-standard
  variable names (provided that they surrounded by backticks) (#1067)

* Add `position_nudge()` for slightly off setting labels (or other geoms)
  from their corresponding points (#1109).

* All defunct functions and arguments have been removed.

* `stat_bin()` now defaults to using counts instead of proportions.
  `geom_count()` provides a convenient alias.

* `scale_size()` now maps values to _area_, not radius. Use `scale_radius()`