@@ -5,7 +5,8 @@
 \title{Wrap a 1d ribbon of panels into 2d.}
 \usage{
 facet_wrap(facets, nrow = NULL, ncol = NULL, scales = "fixed",
-  shrink = TRUE, as.table = TRUE, switch = NULL, drop = TRUE)
+  shrink = TRUE, labeller = "label_value", as.table = TRUE,
+  switch = NULL, drop = TRUE)
 }
 \arguments{
 \item{facets}{Either a formula or character vector. Use either a
@@ -20,6 +21,11 @@ free (\code{"free"}), or free in one dimension (\code{"free_x"},
 \item{shrink}{If \code{TRUE}, will shrink scales to fit output of
 statistics, not raw data. If \code{FALSE}, will be range of raw data
 before statistical summary.}
+
+\item{labeller}{A function that takes two arguments (\code{variable} and
+\code{value}) and returns a string suitable for display in the facet
+strip. See \code{\link{label_value}} for more details and pointers
+to other options.}
 
 \item{as.table}{If \code{TRUE}, the default, the facets are laid out like
 a table with highest values at the bottom-right. If \code{FALSE}, the
@@ -58,6 +64,11 @@ ggplot(mpg, aes(displ, hwy)) +
 ggplot(mpg, aes(displ, hwy)) +
   geom_point() +
   facet_wrap(c("cyl", "drv"))
+
+# Use the `labeller` option to control how labels are printed:
+ggplot(mpg, aes(displ, hwy)) +
+  geom_point() +
+  facet_wrap(c("cyl", "drv"), labeller = "label_both")
 
 # To change the order in which the panels appear, change the levels
 # of the underlying factor.
